azure/angular-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.azure.yml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: angular-app
  name: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: angular-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.azure.yml
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/azure-app-network: "true"
        io.kompose.service: angular-app
    spec:
      containers:
        - env:
            - name: CHOKIDAR_USEPOLLING
              value: "true"
            - name: NODE_ENV
              value: development
          image: conbentcontainer.azurecr.io/angular-app:v2
          name: angular-app
          ports:
            - protocol: TCP
              containerPort: 5211
              hostPort: 5211
          volumeMounts:
            - mountPath: /app
              name: angular-app-cm0
            # - mountPath: /app/node_modules
            #   name: angular-app-claim1
      restartPolicy: Always
      volumes:
        - configMap:
            name: angular-app-cm0
          name: angular-app-cm0
        - name: angular-app-claim1
          persistentVolumeClaim:
            claimName: angular-app-claim1
      imagePullSecrets:
      - name: acr-secret
