azure/angular-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: angular-app
  ports:
    - protocol: TCP
      port: 5211       # External port (LoadBalancer)
      targetPort: 5211 # Internal port on the pod
