azure/conbent.article.api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.azure.yml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: conbent-article-api
  name: conbent-article-api
spec:
  type: LoadBalancer
  ports:
    - name: "7069"
      port: 7069
      targetPort: 7069
  selector:
    io.kompose.service: conbent-article-api
